# data_job_analysis

./: LICENSE  Makefile  README.md  pyproject.toml
data_job_analysis/: __init__.py  dataset.py  features.py  plots.py
data_job_analysis/modeling/: predict.py  train.py
notebooks/: 0.01-data-exploration.ipynb
